--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               </li>
             </nav>
           </div>
-          <!-- <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
           <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
@@ -341,7 +341,7 @@
               <a class="text-gray-400 hover:text-white">Fourth Link</a>
             </li>
           </nav>
-        </div> -->
+        </div>
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
             <h2
               class="title-font font-medium text-white tracking-widest text-sm mb-3"
