--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header class="text-gray-400 bg-gray-900 body-font">
@@ -27,7 +28,7 @@
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
         >
-          <a href="business.html">Register</a>
+          <a href="http://127.0.0.1:5500/reg.html">Register</a>
           <svg
             fill="none"
             stroke="currentColor"
@@ -43,6 +44,38 @@
       </div>
     </header>
 
+    <header class="header">
+      <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-col">
+          <h1
+            class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
+          >
+            Your Daily need of Dairy products.
+          </h1>
+          <p>
+            In addition, you can use the Problems panel (Ctrl+Shift+M) to view
+            common errors for Dockerfile and docker-compose.yml files.
+            Generating Docker files# You can add Docker files to your workspace
+            by opening the Command Palette (Ctrl+Shift+P) and using Docker: Add
+            Docker Files to Workspace command. The command will generate
+            Dockerfile and .dockerignore files and add them to your workspace.
+            The command will also ask you if you want to add Docker Compose
+            files as well, but this is optional. The extension can scaffold
+            Docker files for most popular development languages (C#, Node.js,
+            Python, Ruby, Go, and Java) and customizes the generated Docker
+            files accordingly. When these files are created, we also create the
+            necessary artifacts to provide debugging support for Node.js,
+            Python, and .NET (C#). Docker Explorer# The Docker extension
+            contributes a Docker Explorer view to VS Code. The Docker Explorer
+            lets you examine and manage Docker assets: containers, images,
+            volumes, networks, and container registries. If the Azure Account
+            extension is installed, you can browse your Azure Container
+            Registries as well. The right-click menu provides access to commonly
+            used commands for each type of asset.
+          </p>
+        </div>
+      </section>
+    </header>
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto flex flex-col">
         <h1
