--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+ 
   <body>
+
     <header class="text-gray-400 bg-gray-900 body-font">
       <div
         class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
@@ -14,7 +16,7 @@
           class="flex title-font font-medium items-center text-white mb-4 md:mb-0"
         >
           <img src="img/photography.png" alt="logo" width="50" height="50" />
-          <span class="ml-3 text-xl">YourDailyDairyCart</span>
+          <span class="ml-3 text-xl">YourDailyDairyCar</span>
         </a>
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
