--- a/business.html
+++ b/business.html
@@ -15,7 +15,7 @@
         <span class="ml-3 text-xl">Tailblocks</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-white">First Link</a>
+        <a class="mr-5 hover:text-white">Fist Link</a>
         <a class="mr-5 hover:text-white">Second Link</a>
         <a class="mr-5 hover:text-white">Third Link</a>
         <a class="mr-5 hover:text-white">Fourth Link</a>
