--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
         </button>
+
+        <button
+          class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
+        >
+          <a href="http://127.0.0.1:5500/login.html">Login</a>
+          <svg
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            class="w-4 h-4 ml-1"
+            viewBox="0 0 24 24"
+          >
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -76,73 +93,6 @@
         </div>
       </section>
     </header>
-    <section class="text-gray-600 body-font">
-      <div class="container px-5 py-24 mx-auto flex flex-col">
-        <h1
-          class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
-        >
-          Your Daily need of Dairy products.
-        </h1>
-        <p>
-          In addition, you can use the Problems panel (Ctrl+Shift+M) to view
-          common errors for Dockerfile and docker-compose.yml files. Generating
-          Docker files# You can add Docker files to your workspace by opening
-          the Command Palette (Ctrl+Shift+P) and using Docker: Add Docker Files
-          to Workspace command. The command will generate Dockerfile and
-          .dockerignore files and add them to your workspace. The command will
-          also ask you if you want to add Docker Compose files as well, but this
-          is optional. The extension can scaffold Docker files for most popular
-          development languages (C#, Node.js, Python, Ruby, Go, and Java) and
-          customizes the generated Docker files accordingly. When these files
-          are created, we also create the necessary artifacts to provide
-          debugging support for Node.js, Python, and .NET (C#). Docker Explorer#
-          The Docker extension contributes a Docker Explorer view to VS Code.
-          The Docker Explorer lets you examine and manage Docker assets:
-          containers, images, volumes, networks, and container registries. If
-          the Azure Account extension is installed, you can browse your Azure
-          Container Registries as well. The right-click menu provides access to
-          commonly used commands for each type of asset.
-        </p>
-      </div>
-    </section>
-
-    <section class="text-gray-600 body-font">
-      <div class="container px-5 py-24 mx-auto">
-        <div
-          class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto"
-        >
-          <h1
-            class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900"
-          >
-            A Regestration Form To Access Web-Site Smoothly For Only Farmers.
-          </h1>
-          <button
-            class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
-          >
-            Regester
-          </button>
-        </div>
-      </div>
-    </section>
-
-    <section class="text-gray-600 body-font">
-      <div class="container px-5 py-24 mx-auto">
-        <div
-          class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto"
-        >
-          <h1
-            class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900"
-          >
-            A Regestration Form To Access Web-Site Smoothly For Only Businesses.
-          </h1>
-          <button
-            class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
-          >
-            Regester
-          </button>
-        </div>
-      </div>
-    </section>
 
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
