--- a/reg.html
+++ b/reg.html
@@ -69,7 +69,7 @@
           <button
             class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
           >
-            Regester
+            Register
           </button>
         </div>
       </div>
@@ -88,7 +88,7 @@
           <button
             class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
           >
-            Regester
+            Register
           </button>
         </div>
       </div>
