--- a/index.html
+++ b/index.html
@@ -14,33 +14,20 @@
         <a
           class="flex title-font font-medium items-center text-white mb-4 md:mb-0"
         >
-          <img src="img/photography.png" alt="logo" width="50" height="50" />
-          <span class="ml-3 text-xl">YourDailyDairyCart</span>
+          <a href="index.html" class="active">
+            <img src="img/photography.png" alt="logo" height="50" width="50"
+          /></a>
+          <span class="ml-3 text-xl"
+            ><a href="index.html" class="active">YourDailydDairyCart</a></span
+          >
         </a>
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 hover:text-white" a href="farmer.html">About Us</a>
-          <a class="mr-5 hover:text-white" a href="business.html">abc</a>
-          <a class="mr-5 hover:text-white">Services</a>
-          <a class="mr-5 hover:text-white">Team</a>
+          <a class="mr-5 hover:text-white" a href="aboutus.html">About Us</a>
+          <a class="mr-5 hover:text-white" a href="tips.html">Tips</a>
+          <a class="mr-5 hover:text-white" a href="team.html">Team</a>
         </nav>
-        <button
-          class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
-        >
-          <a href="http://127.0.0.1:5500/reg.html">Register</a>
-          <svg
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="w-4 h-4 ml-1"
-            viewBox="0 0 24 24"
-          >
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </button>
 
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
@@ -308,23 +295,27 @@
               </li>
             </nav>
           </div>
-          <!-- <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a class="text-gray-400 hover:text-white">First Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Second Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Third Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Fourth Link</a>
-            </li>
-          </nav>
-        </div> -->
+          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+            <h2
+              class="title-font font-medium text-white tracking-widest text-sm mb-3"
+            >
+              CATEGORIES
+            </h2>
+            <nav class="list-none mb-10">
+              <li>
+                <a class="text-gray-400 hover:text-white">First Link</a>
+              </li>
+              <li>
+                <a class="text-gray-400 hover:text-white">Second Link</a>
+              </li>
+              <li>
+                <a class="text-gray-400 hover:text-white">Third Link</a>
+              </li>
+              <li>
+                <a class="text-gray-400 hover:text-white">Fourth Link</a>
+              </li>
+            </nav>
+          </div>
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
             <h2
               class="title-font font-medium text-white tracking-widest text-sm mb-3"
@@ -388,8 +379,12 @@
           <a
             class="flex title-font font-medium items-center md:justify-start justify-center text-white"
           >
-            <img src="img/photography.png" alt="logo" height="50" width="50" />
-            <span class="ml-3 text-xl">YourDailydDairyCart</span>
+            <a href="index.html" class="active">
+              <img src="img/photography.png" alt="logo" height="50" width="50"
+            /></a>
+            <span class="ml-3 text-xl"
+              ><a href="index.html" class="active">YourDailydDairyCart</a></span
+            >
           </a>
           <p class="text-sm text-gray-400 sm:ml-6 sm:mt-0 mt-4">
             © 2022 SGGS Team 3 —
