--- a/reg.html
+++ b/reg.html
@@ -13,34 +13,25 @@
         <a
           class="flex title-font font-medium items-center text-white mb-4 md:mb-0"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="w-10 h-10 text-white p-2 bg-green-500 rounded-full"
-            viewBox="0 0 24 24"
+          <a href="index.html" class="active">
+            <img src="img/photography.png" alt="logo" height="50" width="50"
+          /></a>
+          <span class="ml-3 text-xl"
+            ><a href="index.html" class="active">YourDailydDairyCart</a></span
           >
-            <path
-              d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-            ></path>
-          </svg>
-          <span class="ml-3 text-xl">Tailblocks</span>
         </a>
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 hover:text-white">First Link</a>
-          <a class="mr-5 hover:text-white">Second Link</a>
-          <a class="mr-5 hover:text-white">Third Link</a>
-          <a class="mr-5 hover:text-white">Fourth Link</a>
+          <a class="mr-5 hover:text-white" a href="farmer.html">About Us</a>
+          <a class="mr-5 hover:text-white" a href="business.html">Tips</a>
+          <a class="mr-5 hover:text-white" a href="team.html">Team</a>
         </nav>
+
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
         >
-          Login
+          <a href="http://127.0.0.1:5500/login.html">Login</a>
           <svg
             fill="none"
             stroke="currentColor"
