--- a/tips.html
+++ b/tips.html
@@ -47,6 +47,32 @@
         </button>
       </div>
     </header>
+<br>
+    <div
+      class="max-w-2xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
+        <a
+        class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200"
+        >The most common dairy animals are cows, goats (good for small farms), or water buffaloes. There are many breeds of dairy in each, and local information is your best way to choose from them. Contact government agencies, university agricultural extension, and established dairy farms and ask for information to help you decide;</a
+      >
+      </div>
+      </div>
+    </div>
+    
+    <div
+    class="max-w-2xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+  >
+    <div class="mt-2">
+      <a
+        href="#"
+        class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200"
+        > Rule outbreeds that may not thrive in your climate.
+          For each generation, divide the annual maintenance cost by the annual milk production to determine the per-unit production cost of milk.</a
+      >
+    </div>
+    </div>
+  </div>
 
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
