--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
           <a class="mr-5 hover:text-white" a href="farmer.html">About Us</a>
           <a class="mr-5 hover:text-white" a href="business.html">abc</a>
-          <a class="mr-5 hover:text-white">Services</a>
+          <a class="mr-5 hover:text-white" href="login.html">Services</a>
           <a class="mr-5 hover:text-white">Team</a>
         </nav>
         <button
@@ -46,7 +46,7 @@
 
     <header class="header">
       <section class="text-gray-600 body-font">
-        <div class="container px-5 py-24 mx-auto flex flex-col">
+        <div class="text-head container px-5 py-24 mx-auto flex flex-col">
           <h1
             class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
           >
@@ -75,7 +75,7 @@
           </p>
         </div>
       </section>
-    </header>
+    
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto flex flex-col">
         <h1
@@ -333,7 +333,7 @@
         </div>
       </div>
     </section>
-
+  </header>
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
