--- a/reg.html
+++ b/reg.html
@@ -66,11 +66,13 @@
           >
             A Regestration Form To Access Web-Site Smoothly For Only Farmers.
           </h1>
+          <a href="registerF.html">
           <button
             class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
           >
-            Regester
+            Register
           </button>
+          </a>
         </div>
       </div>
     </section>
@@ -85,11 +87,13 @@
           >
             A Regestration Form To Access Web-Site Smoothly For Only Businesses.
           </h1>
+          <a href="regesterB.html">
           <button
             class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
           >
-            Regester
+            Register
           </button>
+          </a>
         </div>
       </div>
     </section>
