--- a/registerF.html
+++ b/registerF.html
@@ -27,7 +27,20 @@
       </button>
     </div>
   </header>
-
+  <div class="lg:w-3/6 md:w-1/2 bg-gray-100 rounded-lg p-2 flex flex-wrap
+  content-center md:ml-auto w-full mt-6 md:mt-0">
+    <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign Up</h2>
+    <div class="relative mb-4">
+      <label for="full-name" class="leading-7 text-sm text-gray-600">Full Name</label>
+      <input type="text" id="full-name" name="full-name" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+    </div>
+    <div class="relative mb-4">
+      <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+      <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+    </div>
+    <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+    <p class="text-xs text-gray-500 mt-3">Literally you probably haven't heard of them jean shorts.</p>
+  </div>
 <footer class="text-gray-400 bg-gray-900 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap md:text-left text-center order-first">
