--- a/regesterB.html
+++ b/regesterB.html
@@ -6,6 +6,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <!-- header -->
+
     <header class="text-gray-400 bg-gray-900 body-font">
       <div
         class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
@@ -23,8 +25,8 @@
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 hover:text-white" a href="farmer.html">About Us</a>
-          <a class="mr-5 hover:text-white" a href="business.html">Tips</a>
+          <a class="mr-5 hover:text-white" a href="aboutus.html">About Us</a>
+          <a class="mr-5 hover:text-white" a href="tips.html">Tips</a>
           <a class="mr-5 hover:text-white" a href="team.html">Team</a>
         </nav>
 
@@ -46,7 +48,6 @@
         </button>
       </div>
     </header>
-
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
