--- a/tips.html
+++ b/tips.html
@@ -6,6 +6,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+
+<!-- header -->
+
     <header class="text-gray-400 bg-gray-900 body-font">
       <div
         class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
@@ -23,10 +26,9 @@
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 hover:text-white" a href="farmer.html">About Us</a>
-          <a class="mr-5 hover:text-white" a href="business.html">abc</a>
-          <a class="mr-5 hover:text-white">Services</a>
-          <a class="mr-5 hover:text-white">Team</a>
+          <a class="mr-5 hover:text-white" a href="aboutus.html">About Us</a>
+          <a class="mr-5 hover:text-white" a href="tips.html">Tips</a>
+          <a class="mr-5 hover:text-white" a href="team.html">Team</a>
         </nav>
 
         <button
