--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         <h1 class="title-font font-medium text-3xl text-gray-900">Slow-carb next level shoindcgoitch ethical authentic, poko scenester</h1>
         <p class="leading-relaxed mt-4">Poke slow-carb mixtape knausgaard, typewriter street art gentrify hammock starladder roathse. Craies vegan tousled etsy austin.</p>
       </div> -->
-      <div class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto mx-auto w-full mt-6 md:mb-6 my-8 ">
+      <div class="lg:w-2/6 md:w-1/2 bg-red-100 rounded-lg p-8 flex flex-col md:ml-auto mx-auto w-full mt-6 md:mb-6 my-8 ">
         <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign Up</h2>
         <div class="relative mb-4">
           <label for="full-name" class="leading-7 text-sm text-gray-600">Full Name</label>
