--- a/login.html
+++ b/login.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <!-- header -->
-
- main
-  <section class="text-gray-500 body-font">
-    <!-- <div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
-      <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
-        <h1 class="title-font font-medium text-3xl text-gray-900">Slow-carb next level shoindcgoitch ethical authentic, poko scenester</h1>
-        <p class="leading-relaxed mt-4">Poke slow-carb mixtape knausgaard, typewriter street art gentrify hammock starladder roathse. Craies vegan tousled etsy austin.</p>
-      </div> -->
-      <div class="lg:w-2/6 md:w-1/2 bg-red-100 rounded-lg p-8 flex flex-col md:ml-auto mx-auto w-full mt-6 md:mb-6 my-8 ">
-        <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign Up</h2>
-        <div class="relative mb-4">
-          <label for="full-name" class="leading-7 text-sm text-gray-600">Full Name</label>
-          <input type="text" id="full-name" name="full-name" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
 
     <header class="text-gray-400 bg-gray-900 body-font">
       <div
@@ -62,6 +50,8 @@
       </div>
     </header>
 
+    <!-- content -->
+
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
         <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
@@ -72,7 +62,6 @@
             Poke slow-carb mixtape knausgaard, typewriter street art gentrify
             hammock starladder roathse. Craies vegan tousled etsy austin.
           </p>
- main
         </div>
         <div
           class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
@@ -111,12 +100,21 @@
             Literally you probably haven't heard of them jean shorts.
           </p>
         </div>
- main
-        <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Login</button>
-        <p class="text-xs text-gray-500 mt-3">Don't Have An Account? <a href="regesterB.html">Sign up as business</a><br><a href="registerF.html">Sign up as Farmer</a></p>
- main
+        <br />
+        <p class="text-xs text-gray-500 mt-3">
+          <h2>Don't Have An Account?</h2>
+          <h2>Sign up first</h2>
+        </p>
+        
+        <button
+          class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+        >
+          <a href="reg.html">Register</a>
+        </button>
       </div>
     </section>
+
+    <!-- Footer -->
 
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
@@ -167,20 +165,20 @@
             <h2
               class="title-font font-medium text-white tracking-widest text-sm mb-3"
             >
-              CATEGORIES
+              TEAMS
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
+                <a class="text-gray-400 hover:text-white">Sarthak Bhatt</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
+                <a class="text-gray-400 hover:text-white">Ritik Rana</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
+                <a class="text-gray-400 hover:text-white">Gaurav</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
+                <a class="text-gray-400 hover:text-white">Sonu</a>
               </li>
             </nav>
           </div>
@@ -197,7 +195,7 @@
                 <label
                   for="footer-field"
                   class="leading-7 text-sm text-gray-400"
-                  >Placeholder</label
+                  >Enter email</label
                 >
                 <input
                   type="text"
@@ -209,12 +207,12 @@
               <button
                 class="lg:mt-2 xl:mt-0 flex-shrink-0 inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded"
               >
-                Button
+                Submit
               </button>
             </div>
             <p class="text-gray-500 text-sm mt-2 md:text-left text-center">
-              Bitters chicharrones fanny pack
-              <br class="lg:block hidden" />waistcoat green juice
+              Subscribe to our newsletter to get
+              <br class="lg:block hidden" />updated for latest news.
             </p>
           </div>
         </div>
@@ -226,30 +224,21 @@
           <a
             class="flex title-font font-medium items-center md:justify-start justify-center text-white"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-10 h-10 text-white p-2 bg-green-500 rounded-full"
-              viewBox="0 0 24 24"
+            <a href="index.html" class="active">
+              <img src="img/photography.png" alt="logo" height="50" width="50"
+            /></a>
+            <span class="ml-3 text-xl"
+              ><a href="index.html" class="active">YourDailydDairyCart</a></span
             >
-              <path
-                d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-              ></path>
-            </svg>
-            <span class="ml-3 text-xl">Tailblocks</span>
           </a>
           <p class="text-sm text-gray-400 sm:ml-6 sm:mt-0 mt-4">
-            © 2020 Tailblocks —
+            © 2022 SGGS Team 3 —
             <a
               href="https://twitter.com/knyttneve"
               class="text-gray-500 ml-1"
               target="_blank"
               rel="noopener noreferrer"
-              >@knyttneve</a
+              >@YourDailydDairyCart</a
             >
           </p>
           <span
