--- a/login.html
+++ b/login.html
@@ -101,10 +101,11 @@
           </p>
         </div>
         <br />
-        <p class="text-xs text-gray-500 mt-3">
-          <h2>Don't Have An Account?</h2>
-          <h2>Sign up first</h2>
+        <p class="text-2xl text-gray-500 mt-1">
+          Don't Have An Account?<br />
+          Please first Register your self.
         </p>
+        <div class="space"></div>
         <button
           class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
         >
