--- a/login.html
+++ b/login.html
@@ -48,41 +48,30 @@
           </svg>
         </button>
       </div>
-<<<<<<< HEAD
-      <div class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0">
-        <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign In</h2>
-        <div class="relative mb-4">
-          <label for="full-name" class="leading-7 text-sm text-gray-600">UserName</label>
-          <input type="text" id="full-name" name="full-name" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-        </div>
-        <div class="relative mb-4">
-          <label for="full-name" class="leading-7 text-sm text-gray-600">Password</label>
-          <input type="password" id="full-name" name="full-name" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-        </div>
-        <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Login</button>
-        <p class="text-xs text-gray-500 mt-3">Not registered yet? <a href="reg.html">SignUp</a> </p>
-      </div>
-    </div>
-  </section>
-=======
     </header>
->>>>>>> 9c4d11d88c718ca2fe318f6388988dd6f3662c41
 
     <!-- content -->
 
     <section class="text-gray-600 body-font">
-      <div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
-        <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
-          <h1 class="title-font font-medium text-3xl text-gray-900">
-            Slow-carb next level shoindcgoitch ethical authentic, poko scenester
-          </h1>
-          <p class="leading-relaxed mt-4">
-            Poke slow-carb mixtape knausgaard, typewriter street art gentrify
-            hammock starladder roathse. Craies vegan tousled etsy austin.
-          </p>
-        </div>
+      <div class="container px-10 py-24 mx-auto flex flex-wrap items-center">
+        <br />
         <div
-          class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
+          class="lg:w-2/5 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
+        >
+          <p class="text-2xl text-gray-500 mt-1">
+            Don't Have An Account?<br />
+            Please first Register your self.
+          </p>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <button
+            class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+          >
+            <a href="http://127.0.0.1:5500/reg.html">Register</a>
+          </button>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div
+          class="lg:w-2/1 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
         >
           <h2 class="text-gray-900 text-lg font-medium title-font mb-5">
             Sign Up
@@ -118,18 +107,6 @@
             Literally you probably haven't heard of them jean shorts.
           </p>
         </div>
-        <br />
-        <p class="text-2xl text-gray-500 mt-1">
-          Don't Have An Account?<br />
-          Please first Register your self.
-        </p>
-        <div class="space"></div>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <button
-          class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
-        >
-          <a href="reg.html">Register</a>
-        </button>
       </div>
     </section>
 
