--- a/reg.html
+++ b/reg.html
@@ -57,14 +57,14 @@
           <h1
             class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900"
           >
-            A Regestration Form To Access Web-Site Smoothly For Only Farmers.
+            A Registration Form To Access Web-Site Smoothly For Only Farmers.
           </h1>
           <a href="registerF.html">
-          <button
-            class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
-          >
-            Register
-          </button>
+            <button
+              class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
+            >
+              Register
+            </button>
           </a>
         </div>
       </div>
@@ -78,14 +78,14 @@
           <h1
             class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900"
           >
-            A Regestration Form To Access Web-Site Smoothly For Only Businesses.
+            A Registration Form To Access Web-Site Smoothly For Only Businesses.
           </h1>
           <a href="regesterB.html">
-          <button
-            class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
-          >
-            Register
-          </button>
+            <button
+              class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
+            >
+              Register
+            </button>
           </a>
         </div>
       </div>
