--- a/team.html
+++ b/team.html
@@ -206,7 +206,7 @@
 
             <div class="flex mt-4 -mx-2">
               <a
-                href="#"
+                href="https://github.com/Gaurav1630"
                 class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
                 aria-label="Github"
               >
