--- a/tips.html
+++ b/tips.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body style="background-color: rgb(176, 182, 230)">
 
 <!-- header -->
 
