--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body>
+  <body style="background-color: #111827">
     <!-- header -->
 
     <header class="text-gray-400 bg-gray-900 body-font">
