--- a/business.html
+++ b/business.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body style="background-color: #111827">
     <!-- header -->
 
     <header class="text-gray-400 bg-gray-900 body-font">
