--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
 
-  <body>
+  <body style="background-color:#111827">
     <!-- header -->
 
     <header class="text-gray-400 bg-gray-900 body-font">
