--- a/farmer.html
+++ b/farmer.html
@@ -49,16 +49,12 @@
       </div>
     </header>
 
+    <!-- content -->
+
     <section class="text-gray-600 body-font overflow-hidden">
       <div class="container px-5 py-24 mx-auto">
         <div class="-my-8 divide-y-2 divide-gray-100">
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-              <span class="font-semibold title-font text-gray-700"
-                >CATEGORY</span
-              >
-              <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
-            </div>
             <div class="md:flex-grow">
               <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
                 Bitters hashtag waistcoat fashion axe chia unicorn
