--- a/login.html
+++ b/login.html
@@ -56,9 +56,9 @@
       <div class="container px-10 py-24 mx-auto flex flex-wrap items-center">
         <br />
         <div
-          class="lg:w-2/5 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
+          class="lg:w-2/5 md:w-1/2 bg-gray-800 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
         >
-          <p class="text-2xl text-gray-500 mt-1">
+          <p class="text-2xl text-white mt-1">
             Don't Have An Account?<br />
             Please first Register your self.
           </p>
@@ -71,31 +71,31 @@
         </div>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <div
-          class="lg:w-2/1 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
+          class="lg:w-2/1 md:w-1/2 bg-gray-800 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0"
         >
-          <h2 class="text-gray-900 text-lg font-medium title-font mb-5">
+          <h2 class="text-white text-lg font-medium title-font mb-5">
             Sign Up
           </h2>
           <div class="relative mb-4">
-            <label for="full-name" class="leading-7 text-sm text-gray-600"
+            <label for="full-name" class="leading-7 text-sm text-white"
               >Full Name</label
             >
             <input
               type="text"
               id="full-name"
               name="full-name"
-              class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+              class="w-full bg-gray-300 rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
             />
           </div>
           <div class="relative mb-4">
-            <label for="email" class="leading-7 text-sm text-gray-600"
+            <label for="email" class="leading-7 text-sm text-white"
               >Password</label
             >
             <input
               type="email"
               id="email"
               name="email"
-              class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+              class="w-full bg-gray-300 rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
             />
           </div>
           <button
@@ -103,10 +103,8 @@
           >
             Login
           </button>
-          <p class="text-xs text-gray-500 mt-3">
-            Literally you probably haven't heard of them jean shorts.
-          </p>
-        </div>
+          <button
+          class="text-xs text-gray-500 mt-3">forgot Password -></button>
       </div>
     </section>
 
