--- a/registerF.html
+++ b/registerF.html
@@ -54,7 +54,7 @@
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-8">
           <h1
-            class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900"
+            class="sm:text-3xl text-2xl font-medium title-font mb-2 text-blue-200"
           >
             Register As Farmer
           </h1>
@@ -63,105 +63,105 @@
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="name" class="leading-7 text-base text-gray-600"
+                <label for="name" class="leading-7 text-base text-gray-300"
                   >Full Name:</label
                 >
                 <input
                   type="text"
                   id="name"
                   name="name"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="phone" class="leading-7 text-base text-gray-600"
+                <label for="phone" class="leading-7 text-base text-gray-300"
                   >Phone Number:</label
                 >
                 <input
                   type="text"
                   id="phone"
                   name="phone"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="state" class="leading-7 text-base text-gray-600"
+                <label for="state" class="leading-7 text-base text-gray-300"
                   >State/City:</label
                 >
                 <input
                   type="text"
                   id="state"
                   name="state"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="pincode" class="leading-7 text-base text-gray-600"
+                <label for="pincode" class="leading-7 text-base text-gray-300"
                   >pincode:</label
                 >
                 <input
                   type="text"
                   id="pincode"
                   name="pincode"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="email" class="leading-7 text-base text-gray-600"
+                <label for="email" class="leading-7 text-base text-gray-300"
                   >Email Id:</label
                 >
                 <input
                   type="email"
                   id="email"
                   name="email"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="milk_qty" class="leading-7 text-base text-gray-600"
+                <label for="milk_qty" class="leading-7 text-base text-gray-300"
                   >Milk Qty:</label
                 >
                 <input
                   type="text"
                   id="milk_qty"
                   name="milk_qty"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="user_id" class="leading-7 text-base text-gray-600"
+                <label for="user_id" class="leading-7 text-base text-gray-300"
                   >User Id:</label
                 >
                 <input
                   type="text"
                   id="user_id"
                   name="user_id"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
-                <label for="password" class="leading-7 text-base text-gray-600"
+                <label for="password" class="leading-7 text-base text-gray-300"
                   >Password:</label
                 >
                 <input
                   type="password"
                   id="password"
                   name="password"
-                  class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                  class="w-full bg-white-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                 />
               </div>
             </div>
