--- a/tips.html
+++ b/tips.html
@@ -58,7 +58,7 @@
     >
       <div class="mt-2">
         <a
-        class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200"
+        class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
         >The most common dairy animals are cows, goats (good for small farms), or water buffaloes. There are many breeds of dairy in each, and local information is your best way to choose from them. Contact government agencies, university agricultural extension, and established dairy farms and ask for information to help you decide;</a
       >
       </div>
@@ -66,12 +66,12 @@
     </div>
     <br>
     <div
-    class="max-w-2xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    class="max-w-3xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
   >
     <div class="mt-2">
       <a
         href="#"
-        class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200"
+        class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
         > </a
       >
     </div>
